Agregar selectores en Usuario y poner otros campos como multiples

--- a/src/app/security-module/user/pages/user-item/user-item.component.html
+++ b/src/app/security-module/user/pages/user-item/user-item.component.html
@@ -1,8 +1,10 @@
 <app-user-form
-  *ngIf="roles && catDoncents && catSciences && specialties && docTypes && nationalities"
+  *ngIf="roles && catDoncents && catSciences && specialties && docTypes && nationalities && municipalities && countries"
   [user]="user"
   [person]="person"
   [roles]="roles"
+  [municipalities]="municipalities"
+  [countries]="countries"
   [catDoncents]="catDoncents"
   [catSciences]="catSciences"
   [specialties]="specialties"
