--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -80,7 +80,7 @@
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Categoría Docente</mat-label>
-              <mat-select formControlName="categ_docente">
+              <mat-select formControlName="categ_docente" multiple>
                 <mat-option *ngFor="let cat of catDoncents" [value]="cat.id">{{ cat.descripcion }}</mat-option>
               </mat-select>
               <mat-error *ngIf="this.userFormGroup.controls['categ_docente'].invalid">Seleccione una Categoría Docente</mat-error>
@@ -91,7 +91,7 @@
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Categoria Científica</mat-label>
-              <mat-select formControlName="categ_cientifica">
+              <mat-select formControlName="categ_cientifica" multiple>
                 <mat-option *ngFor="let cat of catSciences" [value]="cat.id">{{ cat.descripcion }}</mat-option>
               </mat-select>
               <mat-error *ngIf="this.userFormGroup.controls['categ_cientifica'].invalid">Seleccione una Categoria Científica</mat-error>
@@ -102,7 +102,7 @@
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Especialidades</mat-label>
-              <mat-select formControlName="especialidad">
+              <mat-select formControlName="especialidad" multiple>
                 <mat-option *ngFor="let specialty of specialties" [value]="specialty.id">{{ specialty.descripcion }}</mat-option>
               </mat-select>
               <mat-error *ngIf="this.userFormGroup.controls['categ_cientifica'].invalid">Seleccione una especialidad</mat-error>
@@ -280,7 +280,9 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>País:</mat-label>
-                <input matInput formControlName="pais" />
+                <mat-select formControlName="pais">
+                  <mat-option *ngFor="let country of countries" [value]="country.id">{{ country.nombre }}</mat-option>
+                </mat-select>
               </mat-form-field>
             </div>
 
@@ -288,7 +290,9 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Municipio:</mat-label>
-                <input matInput formControlName="municipio" />
+                <mat-select formControlName="municipio">
+                  <mat-option *ngFor="let mun of municipalities" [value]="mun.id">{{ mun.nombre }}</mat-option>
+                </mat-select>
               </mat-form-field>
             </div>
 
@@ -303,7 +307,7 @@
             <!-- direccion -->
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Direcciones:</mat-label>
+                <mat-label>Dirección:</mat-label>
                 <input matInput formControlName="direccion" />
                 <mat-error *ngIf="personFormGroup.controls['direccion'].invalid"> {{ 'La dirección es' }} <strong>requerida</strong> </mat-error>
               </mat-form-field>
