--- a/src/app/structure-modules/work-station/components/work-station-form/work-station-form.component.html
+++ b/src/app/structure-modules/work-station/components/work-station-form/work-station-form.component.html
@@ -14,12 +14,28 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="w-100" appearance="outline">
+    <!-- <mat-form-field class="w-100" appearance="outline">
       <mat-label>Departamento:</mat-label>
       <mat-select *ngIf="departaments" formControlName="departamento">
         <mat-option *ngFor="let departament of departaments" [value]="departament.id">{{ departament.nombre }}</mat-option>
       </mat-select>
-    </mat-form-field>
+    </mat-form-field> -->
+
+    <div class="mb-4">
+      <ng-select
+        appearance="outline"
+        class="custom w-100"
+        placeholder="Departamento"
+        [items]="departaments"
+        bindLabel="nombre"
+        bindValue="id"
+        formControlName="departamento"
+      >
+      </ng-select>
+      <small class="text-danger error-style" *ngIf="workStationForm.controls['departamento'].errors?.required && workStationForm.controls['departamento'].dirty"
+        >El departamento es <strong>requerido</strong></small
+      >
+    </div>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
