--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -76,6 +76,17 @@
             </mat-form-field>
           </div>
 
+          <!-- profesion -->
+          <div class="col-lg-6 col-md-12">
+            <mat-form-field class="w-100" appearance="outline">
+              <mat-label>Profesión:</mat-label>
+              <mat-select formControlName="profesion">
+                <mat-option *ngFor="let prof of professions" [value]="prof.id">{{ prof.nombre }}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="userFormGroup.controls['profesion'].invalid"> {{ 'La Profesión es' }} <strong>requerida</strong> </mat-error>
+            </mat-form-field>
+          </div>
+
           <!-- Categoria Docente -->
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
@@ -209,15 +220,15 @@
             </mat-form-field>
           </div>
           <!-- tipo_doc -->
-            <div class="col-lg-6 col-md-12">
-              <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Tipo de Documento:</mat-label>
-                <mat-select formControlName="tipo_doc">
-                  <mat-option *ngFor="let doc of docTypes" [value]="doc.id">{{ doc.descripcion }}</mat-option>
-                </mat-select>
-                <mat-error *ngIf="personFormGroup.controls['tipo_doc'].invalid">Seleccione un Documento</mat-error>
-              </mat-form-field>
-            </div>
+          <div class="col-lg-6 col-md-12">
+            <mat-form-field class="w-100" appearance="outline">
+              <mat-label>Tipo de Documento:</mat-label>
+              <mat-select formControlName="tipo_doc">
+                <mat-option *ngFor="let doc of docTypes" [value]="doc.id">{{ doc.descripcion }}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="personFormGroup.controls['tipo_doc'].invalid">Seleccione un Documento</mat-error>
+            </mat-form-field>
+          </div>
 
           <!-- Fecha de Nacimiento -->
           <div class="col-lg-6 col-md-12">
@@ -226,14 +237,9 @@
               <input matInput formControlName="fecha_nacimiento" [matDatepicker]="picker" />
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-          </div>
-
-          <!-- profesion -->
-          <div class="col-lg-6 col-md-12">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Profesión:</mat-label>
-              <input matInput formControlName="profesion" />
+              <mat-error *ngIf="personFormGroup.controls['fecha_nacimiento'].errors?.required">
+                {{ 'La fecha de nacimiento es ' }} <strong>requerida</strong>
+              </mat-error>
             </mat-form-field>
           </div>
 
@@ -242,6 +248,7 @@
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Ocupación:</mat-label>
               <input matInput formControlName="ocupacion" />
+              <mat-error *ngIf="personFormGroup.controls['ocupacion'].errors?.required"> {{ 'La Ocupación es ' }} <strong>requerida</strong> </mat-error>
             </mat-form-field>
           </div>
 
@@ -259,6 +266,7 @@
                 <p>Masculino</p>
               </div></mat-radio-button
             >
+            <mat-error *ngIf="personFormGroup.controls['sexo'].errors?.required"> {{ 'Seleccione un sexo ' }} </mat-error>
           </mat-radio-group>
         </div>
 
@@ -268,38 +276,24 @@
             <!-- nacionalidad -->
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Nacionalidades:</mat-label>
+                <mat-label>Nacionalidad:</mat-label>
                 <mat-select formControlName="nacionalidad">
                   <mat-option *ngFor="let nationality of nationalities" [value]="nationality.id">{{ nationality.descripcion }}</mat-option>
                 </mat-select>
-              </mat-form-field>
-            </div>
-
-            <!-- Pais -->
-            <div class="col-lg-6 col-md-12">
-              <mat-form-field class="w-100" appearance="outline">
-                <mat-label>País:</mat-label>
-                <mat-select formControlName="pais">
-                  <mat-option *ngFor="let country of countries" [value]="country.id">{{ country.nombre }}</mat-option>
-                </mat-select>
+                <mat-error *ngIf="personFormGroup.controls['nacionalidad'].errors?.required">
+                  {{ 'La nacionalidad es ' }} <strong>requerida</strong>
+                </mat-error>
               </mat-form-field>
             </div>
 
             <!-- municipio -->
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Municipio:</mat-label>
+                <mat-label>Distrito:</mat-label>
                 <mat-select formControlName="municipio">
                   <mat-option *ngFor="let mun of municipalities" [value]="mun.id">{{ mun.nombre }}</mat-option>
                 </mat-select>
-              </mat-form-field>
-            </div>
-
-            <!-- estado -->
-            <div class="col-lg-6 col-md-12">
-              <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Estado:</mat-label>
-                <input matInput formControlName="estado" />
+                <mat-error *ngIf="personFormGroup.controls['municipio'].errors?.required"> {{ 'El Distrito es ' }} <strong>requerido</strong> </mat-error>
               </mat-form-field>
             </div>
 
@@ -317,6 +311,7 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Código:</mat-label>
                 <input matInput formControlName="numero" />
+                <mat-error *ngIf="personFormGroup.controls['numero'].errors?.required"> {{ 'El código es ' }} <strong>requerido</strong> </mat-error>
               </mat-form-field>
             </div>
 
@@ -325,6 +320,7 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Código Postal:</mat-label>
                 <input matInput formControlName="cod_postal" />
+                <mat-error *ngIf="personFormGroup.controls['cod_postal'].errors?.required"> {{ 'El Código Postal es ' }} <strong>requerido</strong> </mat-error>
               </mat-form-field>
             </div>
 
@@ -333,6 +329,9 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Nombre Madre:</mat-label>
                 <input matInput formControlName="nombre_madre" />
+                <mat-error *ngIf="personFormGroup.controls['nombre_madre'].errors?.required">
+                  {{ 'El Nombre de la  Madre es ' }} <strong>requerido</strong>
+                </mat-error>
               </mat-form-field>
             </div>
 
@@ -341,6 +340,9 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Nombre del Padre:</mat-label>
                 <input matInput formControlName="nombre_padre" />
+                <mat-error *ngIf="personFormGroup.controls['nombre_padre'].errors?.required">
+                  {{ 'El Nombre del Padre es ' }} <strong>requerido</strong>
+                </mat-error>
               </mat-form-field>
             </div>
 
@@ -349,6 +351,9 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Contacto de emergencia:</mat-label>
                 <input matInput formControlName="contacto_emergencia" />
+                <mat-error *ngIf="personFormGroup.controls['contacto_emergencia'].errors?.required">
+                  {{ 'El Contacto de emergencia es ' }} <strong>requerido</strong>
+                </mat-error>
               </mat-form-field>
             </div>
 
@@ -357,6 +362,9 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono de Emergencia:</mat-label>
                 <input matInput formControlName="telefono_emergencia" />
+                <mat-error *ngIf="personFormGroup.controls['telefono_emergencia'].errors?.required">
+                  {{ 'El Teléfono de Emergencia es ' }} <strong>requerido</strong>
+                </mat-error>
               </mat-form-field>
             </div>
 
@@ -365,6 +373,9 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono de casa:</mat-label>
                 <input matInput formControlName="telefono_casa" />
+                <mat-error *ngIf="personFormGroup.controls['telefono_casa'].errors?.required">
+                  {{ 'El Teléfono de casa es ' }} <strong>requerido</strong>
+                </mat-error>
               </mat-form-field>
             </div>
             <!-- telefono_trabajo -->
@@ -432,6 +443,9 @@
               <mat-icon class="mx-2" *ngIf="userFormGroup.controls['is_superuser'].value" aria-hidden="false">done</mat-icon>
               <mat-icon class="mx-2" *ngIf="!userFormGroup.controls['is_superuser'].value" aria-hidden="false">close</mat-icon>
             </div>
+            <p class="my-2">
+              Profesión: <b>{{ userFormGroup.controls['profesion'].value }}</b>
+            </p>
             <p class="my-2" *ngIf="userFormGroup.controls['groups']?.value">
               Grupo: <b>{{ roles[userFormGroup.controls['groups']?.value]?.name }}</b>
             </p>
@@ -455,9 +469,6 @@
             </p>
             <p class="my-2">
               Fecha de Nacimiento: <b>{{ personFormGroup.controls['fecha_nacimiento'].value | date: 'dd/MM/yyyy' }}</b>
-            </p>
-            <p class="my-2">
-              Profesión: <b>{{ personFormGroup.controls['profesion'].value }}</b>
             </p>
             <p class="my-2">
               Ocupación: <b>{{ personFormGroup.controls['ocupacion'].value }}</b>
