--- a/src/app/structure-modules/org-level/pages/org-level-page/org-level-page.component.html
+++ b/src/app/structure-modules/org-level/pages/org-level-page/org-level-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Nivel Organizacional</h4>
-    <button (click)="createOrgLevel()" mat-raised-button color="primary" class="button">Crear Nivel Organizacional</button>
+    <h4>Ubicación Organizacional</h4>
+    <button (click)="createOrgLevel()" mat-raised-button color="primary" class="button">Crear Ubicación Organizacional</button>
   </div>
   <app-custom-table
     *ngIf="orgLevel"
