--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -213,7 +213,7 @@
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Código de identificación:</mat-label>
-              <input matInput formControlName="nro_identificacion" />
+              <input matInput formControlName="nro_identificacion" (ngModelChange)="changeIdentificationCode($event)" />
               <mat-error *ngIf="personFormGroup.controls['nro_identificacion'].invalid">
                 {{ 'El código de identificación es' }} <strong>requerido</strong>
               </mat-error>
@@ -516,6 +516,10 @@
               Télefono Movil: <b>{{ personFormGroup.controls['telefono_movil'].value }}</b>
             </p>
           </div>
+        </div>
+
+        <div class="d-flex justify-content-end" *ngIf="personFormGroup && qrCodeControl?.value">
+          <img class="qr-image" [src]="apiUrl + qrCodeControl?.value" [alt]="apiUrl + qrCodeControl?.value" />
         </div>
       </div>
 
