--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -44,24 +44,10 @@
             </mat-form-field>
           </div>
 
-          <!-- is_staff -->
-          <div class="col-12">
-            <div class="w-100">
-              <mat-checkbox formControlName="is_staff">Personal</mat-checkbox>
-            </div>
-          </div>
-
           <!-- is_active -->
           <div class="col-12">
             <div class="w-100">
               <mat-checkbox formControlName="is_active">Activo</mat-checkbox>
-            </div>
-          </div>
-
-          <!-- is_superuser -->
-          <div class="col-12 mb-3">
-            <div class="w-100">
-              <mat-checkbox formControlName="is_superuser">Administrador</mat-checkbox>
             </div>
           </div>
 
@@ -126,7 +112,7 @@
         <div class="my-3 d-flex justify-content-center align-items-center">
           <h4>Seguridad</h4>
         </div>
-        <!-- is_superuser -->
+        <!-- change_password -->
         <div *ngIf="user" class="col-12 mb-3">
           <div class="w-100">
             <mat-checkbox (change)="changePasswordControl($event)" formControlName="change_password">Cambiar Contraseña.</mat-checkbox>
@@ -308,9 +294,9 @@
             <!-- numero -->
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Código:</mat-label>
+                <mat-label>Número:</mat-label>
                 <input matInput formControlName="numero" />
-                <mat-error *ngIf="personFormGroup.controls['numero'].errors?.required"> {{ 'El código es ' }} <strong>requerido</strong> </mat-error>
+                <mat-error *ngIf="personFormGroup.controls['numero'].errors?.required"> {{ 'El Número es ' }} <strong>requerido</strong> </mat-error>
               </mat-form-field>
             </div>
 
@@ -432,16 +418,6 @@
               <mat-icon class="mx-2" *ngIf="userFormGroup.controls['username'].value" aria-hidden="false">done</mat-icon>
               <mat-icon class="mx-2" *ngIf="!userFormGroup.controls['username'].value" aria-hidden="false">close</mat-icon>
             </div>
-            <div class="d-flex my-2">
-              <p>Personal:</p>
-              <mat-icon class="mx-2" *ngIf="userFormGroup.controls['is_staff'].value" aria-hidden="false">done</mat-icon>
-              <mat-icon class="mx-2" *ngIf="!userFormGroup.controls['is_staff'].value" aria-hidden="false">close</mat-icon>
-            </div>
-            <div class="d-flex my-2">
-              <p>Administrador:</p>
-              <mat-icon class="mx-2" *ngIf="userFormGroup.controls['is_superuser'].value" aria-hidden="false">done</mat-icon>
-              <mat-icon class="mx-2" *ngIf="!userFormGroup.controls['is_superuser'].value" aria-hidden="false">close</mat-icon>
-            </div>
             <p class="my-2">
               Profesión: <b>{{ userFormGroup.controls['profesion'].value }}</b>
             </p>
@@ -488,7 +464,7 @@
             </p>
 
             <p class="my-2" *ngIf="personFormGroup.controls['numero'].value">
-              Código: <b>{{ personFormGroup.controls['numero'].value }}</b>
+              Número: <b>{{ personFormGroup.controls['numero'].value }}</b>
             </p>
 
             <p class="my-2" *ngIf="personFormGroup.controls['cod_postal'].value">
