--- a/src/app/nomenclator-modules/municipality/pages/municipality-page/municipality-page.component.html
+++ b/src/app/nomenclator-modules/municipality/pages/municipality-page/municipality-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Municipios</h4>
-    <button (click)="createMunicipality()" mat-raised-button color="primary" class="button">Crear Municipio</button>
+    <h4>Distritos</h4>
+    <button (click)="createMunicipality()" mat-raised-button color="primary" class="button">Crear Distrito</button>
   </div>
   <app-custom-table
     *ngIf="municipalities"
