--- a/src/app/nomenclator-modules/state/pages/state-page/state-page.component.html
+++ b/src/app/nomenclator-modules/state/pages/state-page/state-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Estados</h4>
-    <button (click)="createState()" mat-raised-button color="primary" class="button">Crear Estado</button>
+    <h4>Pronvicias</h4>
+    <button (click)="createState()" mat-raised-button color="primary" class="button">Crear Provincia</button>
   </div>
   <app-custom-table
     *ngIf="states"
