--- a/src/app/nomenclator-modules/state/components/state-form/state-form.component.html
+++ b/src/app/nomenclator-modules/state/components/state-form/state-form.component.html
@@ -1,5 +1,5 @@
 <div class="form">
-  <h4>{{ data.state ? 'Editar Estado' : 'Crear Estado' }}</h4>
+  <h4>{{ data.state ? 'Editar Provincia' : 'Crear Provincia' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="stateForm" [formGroup]="stateForm">
     <mat-form-field class="w-100" appearance="outline">
