--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <ngx-spinner bdColor="rgba(51,51,51,0.60)" size = "medium" color = "#fff" type = "ball-atom" [fullScreen] = "true">
-  <p style="color: white" > Loading... </p>
+  <p style="color: white" > Cargando... </p>
 </ngx-spinner>
 <router-outlet></router-outlet>
