--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -55,7 +55,8 @@
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Grupo:</mat-label>
-              <mat-select formControlName="groups" multiple>
+              <mat-select #mySelect formControlName="groups" multiple>
+                <button type="button" class="btn btn-primary adjust" (click)="mySelect.close()">Cerrar</button>
                 <mat-option *ngFor="let role of roles" [value]="role.id">{{ role.name }}</mat-option>
               </mat-select>
               <mat-error *ngIf="this.userFormGroup.controls['groups'].invalid">Seleccione un Grupo</mat-error>
@@ -77,7 +78,8 @@
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Categoría Docente</mat-label>
-              <mat-select formControlName="categ_docente" multiple>
+              <mat-select #mySelectCD formControlName="categ_docente" multiple>
+                <button type="button" class="btn btn-primary adjust" (click)="mySelectCD.close()">Cerrar</button>
                 <mat-option *ngFor="let cat of catDoncents" [value]="cat.id">{{ cat.descripcion }}</mat-option>
               </mat-select>
               <mat-error *ngIf="this.userFormGroup.controls['categ_docente'].invalid">Seleccione una Categoría Docente</mat-error>
@@ -88,7 +90,8 @@
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Categoria Científica</mat-label>
-              <mat-select formControlName="categ_cientifica" multiple>
+              <mat-select #mySelectCC formControlName="categ_cientifica" multiple>
+                <button type="button" class="btn btn-primary adjust" (click)="mySelectCC.close()">Cerrar</button>
                 <mat-option *ngFor="let cat of catSciences" [value]="cat.id">{{ cat.descripcion }}</mat-option>
               </mat-select>
               <mat-error *ngIf="this.userFormGroup.controls['categ_cientifica'].invalid">Seleccione una Categoria Científica</mat-error>
@@ -99,7 +102,8 @@
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Especialidades</mat-label>
-              <mat-select formControlName="especialidad" multiple>
+              <mat-select #mySelectE formControlName="especialidad" multiple>
+                <button type="button" class="btn btn-primary adjust" (click)="mySelectE.close()">Cerrar</button>
                 <mat-option *ngFor="let specialty of specialties" [value]="specialty.id">{{ specialty.descripcion }}</mat-option>
               </mat-select>
               <mat-error *ngIf="this.userFormGroup.controls['categ_cientifica'].invalid">Seleccione una especialidad</mat-error>
