--- a/src/app/shared/table/custom-table/custom-table.component.html
+++ b/src/app/shared/table/custom-table/custom-table.component.html
@@ -1,11 +1,29 @@
 <div *ngIf="filters" class="d-flex flex-row flex-wrap align-items-center">
   <ng-container *ngFor="let filter of filters">
-    <form [formGroup]="filterForm">
-      <mat-form-field class="mx-1">
-        <mat-label>{{ filter.title }}</mat-label>
-        <input matInput (keyup)="searchTerm.next()" formControlName="{{ filter.name }}" />
-      </mat-form-field>
-    </form>
+    <ng-container *ngIf="filter.type === 'text'">
+      <form [formGroup]="filterForm">
+        <mat-form-field class="mx-1">
+          <mat-label>{{ filter.title }}</mat-label>
+          <input matInput (keyup)="searchTerm.next()" formControlName="{{ filter.name }}" />
+        </mat-form-field>
+      </form>
+    </ng-container>
+
+    <ng-container *ngIf="filter.type === 'select'">
+      <form [formGroup]="filterForm" class="mx-1">
+        <ng-select
+          class="mx-1 w-100 select-style"
+          (change)="searchTerm.next()"
+          [clearable]="false"
+          [placeholder]="filter.title"
+          [items]="filter.items"
+          bindLabel="name"
+          bindValue="id"
+          formControlName="{{ filter.name }}"
+        >
+        </ng-select>
+      </form>
+    </ng-container>
   </ng-container>
   <button mat-icon-button title="Reiniciar busqueda" (click)="resetFilters()">
     <mat-icon>clear</mat-icon>
