--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -14,7 +14,7 @@
             <div class="profile-img" fxLayoutAlign="center center">
               <img
                 style="height: 70px; width: auto; object-fit: cover; object-position: center; border-radius: 4px"
-                src="../../../assets/images/users/avatar-default.png"
+                src="../../../assets/icono.jpg"
               />
             </div>
           </mat-toolbar-row>
