--- a/src/app/backend/appBackoffice/dashboard/dashboard.component.scss
+++ b/src/app/backend/appBackoffice/dashboard/dashboard.component.scss
@@ -3,7 +3,7 @@
 }
 
 .header-image {
-  background-image: url('../../../../assets/images/users/profile2.png');
+  background-image: url('../../../../assets/images/grafico.png');
   background-size: cover;
 }
 
