arreglando otra vez

--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -227,6 +227,7 @@
               <mat-label>Fecha de Nacimiento</mat-label>
               <input matInput
               formControlName="fecha_nacimiento"
+              [min]="minDate"
               [max]="maxDate"
               [matDatepicker]="picker"
               />
