--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -235,21 +235,15 @@
           </div>
 
           <!-- sexo -->
-          <mat-radio-group class="my-3" aria-label="Sexo:" formControlName="sexo">
-            <mat-radio-button class="mr-3" value="1"
-              ><div class="d-flex justify-content-center align-items-center">
-                <mat-icon aria-hidden="false">female</mat-icon>
-                <p>Femenino</p>
-              </div></mat-radio-button
-            >
-            <mat-radio-button value="2"
-              ><div class="d-flex justify-content-center align-items-center">
-                <mat-icon aria-hidden="false">male</mat-icon>
-                <p>Masculino</p>
-              </div></mat-radio-button
-            >
-            <mat-error *ngIf="personFormGroup.controls['sexo'].errors?.required"> {{ 'Seleccione un sexo ' }} </mat-error>
-          </mat-radio-group>
+          <div class="col-lg-6 col-md-12">
+            <mat-form-field class="w-100" appearance="outline">
+              <mat-label>Sexo:</mat-label>
+              <mat-select formControlName="sexo">
+                <mat-option *ngFor="let gender of genders" [value]="gender.id">{{ gender.descripcion }}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="personFormGroup.controls['sexo'].invalid">Seleccione un sexo</mat-error>
+            </mat-form-field>
+          </div>
         </div>
 
         <div class="card p-3">
@@ -450,11 +444,10 @@
             <p class="my-2">
               Fecha de Nacimiento: <b>{{ personFormGroup.controls['fecha_nacimiento'].value | date: 'dd/MM/yyyy' }}</b>
             </p>
-            <div class="d-flex my-2">
-              <p>Sexo:</p>
-              <mat-icon class="mx-2" *ngIf="personFormGroup.controls['sexo'].value == 1" aria-hidden="false">famale</mat-icon>
-              <mat-icon class="mx-2" *ngIf="personFormGroup.controls['sexo'].value == 2" aria-hidden="false">male</mat-icon>
-            </div>
+
+            <p class="my-2" *ngIf="personFormGroup.controls['sexo'].value">
+              Sexo: <b>{{ genders[personFormGroup.controls['sexo']?.value]?.descripcion }}</b>
+            </p>
 
             <p class="my-2" *ngIf="personFormGroup.controls['tipo_doc'].value">
               Tipo de Documento: <b>{{ docTypes[personFormGroup.controls['tipo_doc']?.value]?.descripcion }}</b>
