--- a/src/app/shared/table/custom-table/custom-table.component.html
+++ b/src/app/shared/table/custom-table/custom-table.component.html
@@ -35,7 +35,7 @@
     <ng-container *ngFor="let column of displayedColumns; let i = index" matColumnDef="{{ column }}">
       <ng-container *ngIf="displayedColumns[i] !== 'actions'; else actionsButtons">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="{{ column }}">{{ columnsName[i] }}</th>
-        <td mat-cell *matCellDef="let row">{{ row[column] }}</td>
+        <td mat-cell *matCellDef="let row"><div [innerHtml]="row[column]"></div></td>
       </ng-container>
       <ng-template #actionsButtons>
         <th mat-header-cell *matHeaderCellDef class="header-align-right"></th>
