--- a/src/app/structure-modules/health-unit/components/health-unit-form/health-unit-form.component.html
+++ b/src/app/structure-modules/health-unit/components/health-unit-form/health-unit-form.component.html
@@ -5,11 +5,12 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Nombre:</mat-label>
       <input matInput formControlName="nombre" />
-      <mat-error *ngIf="this.healthUnitForm.controls['nombre'].invalid"> {{ 'El nombre es' }} <strong>requerido</strong></mat-error>
+      <mat-error *ngIf="nameHealtControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="nameHealtControl.errors?.pattern"> {{ 'El nombre solo permite letras y espacios' }} </mat-error>
     </mat-form-field>
 
     <div class="mb-4">
-      <ng-select appearance="outline" class="custom w-100" placeholder="Ubicacion" [items]="levels" bindLabel="nombre" bindValue="id" formControlName="nivel">
+      <ng-select appearance="outline" class="custom w-100" placeholder="Ubicación" [items]="levels" bindLabel="nombre" bindValue="id" formControlName="nivel">
       </ng-select>
       <small class="text-success error-style" *ngIf="data.healthUnit">Ubicacion: {{data.healthUnit.ubicacion}}</small>
       <small class="text-danger error-style" *ngIf="healthUnitForm.controls['nivel'].errors?.required && healthUnitForm.controls['nivel'].dirty"
@@ -29,7 +30,7 @@
       <mat-error *ngIf="this.healthUnitForm.controls['telefono_movil'].invalid"> {{ 'La teléfono móvil es' }} <strong>requerida</strong></mat-error>
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
-      <mat-label>Direccion:</mat-label>
+      <mat-label>Dirección:</mat-label>
       <input matInput formControlName="direccion" />
       <mat-error *ngIf="this.healthUnitForm.controls['direccion'].invalid"> {{ 'La direccion es' }} <strong>requerida</strong></mat-error>
     </mat-form-field>
@@ -38,7 +39,7 @@
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
     <button (click)="onSubmit(healthUnitForm.value)" [disabled]="!healthUnitForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.healthUnit ? 'Editar' : 'Crear' }}
+      {{ data.healthUnit ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
