date agregar a la tabla

--- a/src/app/shared/table/custom-table/custom-table.component.html
+++ b/src/app/shared/table/custom-table/custom-table.component.html
@@ -24,6 +24,21 @@
         </ng-select>
       </form>
     </ng-container>
+    <ng-container *ngIf="filter.type === 'date'">
+      <form [formGroup]="filterForm" class="mx-1">
+        <mat-form-field class="w-100">
+          <mat-label>{{ filter.title }}</mat-label>
+          <input matInput
+                 formControlName="{{ filter.name }}"
+                 [matDatepicker]="picker"
+                 readonly
+                 (dateChange)="searchTerm.next()"
+          />
+          <mat-datepicker-toggle matSuffix  [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </form>
+    </ng-container>
   </ng-container>
   <button mat-icon-button title="Reiniciar busqueda" (click)="resetFilters()">
     <mat-icon>clear</mat-icon>
