--- a/src/app/shared/table/custom-table/custom-table.component.html
+++ b/src/app/shared/table/custom-table/custom-table.component.html
@@ -28,7 +28,7 @@
       <form [formGroup]="filterForm" class="mx-1">
         <mat-form-field class="w-100">
           <mat-label>{{ filter.title }}</mat-label>
-          <input matInput formControlName="{{ filter.name }}" [matDatepicker]="picker" readonly (dateChange)="changeDate($event.value, filter.name)" />
+          <input matInput formControlName="{{ filter.name }}___date" [matDatepicker]="picker" readonly (dateChange)="changeDate($event.value, filter.name)" />
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
