Validación de nombre y cabio de Editar por Aceptar

--- a/src/app/structure-modules/office/components/office-form/office-form.component.html
+++ b/src/app/structure-modules/office/components/office-form/office-form.component.html
@@ -5,7 +5,8 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Nombre:</mat-label>
       <input matInput formControlName="nombre" />
-      <mat-error *ngIf="this.officeForm.controls['nombre'].invalid"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="this.nameOfficeControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="this.nameOfficeControl.errors?.pattern"> {{ 'El nombre solo permite letras y espacios' }}  </mat-error>
     </mat-form-field>
     <div class="mb-4">
       <ng-select
@@ -27,7 +28,7 @@
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
     <button (click)="onSubmit(officeForm.value)" [disabled]="!officeForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.office ? 'Editar' : 'Crear' }}
+      {{ data.office ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
