--- a/src/app/structure-modules/health-unit/components/health-unit-form/health-unit-form.component.html
+++ b/src/app/structure-modules/health-unit/components/health-unit-form/health-unit-form.component.html
@@ -22,12 +22,12 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Teléfono fijo:</mat-label>
       <input matInput formControlName="telefono_fijo" />
-      <mat-error *ngIf="this.healthUnitForm.controls['telefono_fijo'].invalid"> {{ 'El teléfono fijo es' }} <strong>requerida</strong></mat-error>
+      <mat-error *ngIf="this.healthUnitForm.controls['telefono_fijo'].invalid"> {{ 'Incorrecto formato de teléfono' }}</mat-error>
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Teléfono Móvil:</mat-label>
       <input matInput formControlName="telefono_movil" />
-      <mat-error *ngIf="this.healthUnitForm.controls['telefono_movil'].invalid"> {{ 'La teléfono móvil es' }} <strong>requerida</strong></mat-error>
+      <mat-error *ngIf="this.healthUnitForm.controls['telefono_movil'].invalid"> {{ 'Incorrecto formato de teléfono' }} </mat-error>
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Dirección:</mat-label>
