Validación de la descripción y cambio de Editar por Aceptar en Especialidad

--- a/src/app/nomenclator-modules/specialty/components/specialty-form/specialty-form.component.html
+++ b/src/app/nomenclator-modules/specialty/components/specialty-form/specialty-form.component.html
@@ -5,14 +5,15 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Descripción:</mat-label>
       <input matInput formControlName="descripcion" />
-      <mat-error *ngIf="this.specialtyForm.controls['descripcion'].invalid"> {{ 'La descripción es' }} <strong>requerida</strong> </mat-error>
+      <mat-error *ngIf="nameSpecialtyControl.errors?.required"> {{ 'La descripción es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="nameSpecialtyControl.errors?.pattern"> {{ 'La descripción solo permite letras y espacios' }} </mat-error>
     </mat-form-field>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
     <button (click)="onSubmit(specialtyForm.value)" [disabled]="!specialtyForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.specialty ? 'Editar' : 'Crear' }}
+      {{ data.specialty ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
