--- a/src/app/nomenclator-modules/civil-status/components/civil-status-form/civil-status-form.component.html
+++ b/src/app/nomenclator-modules/civil-status/components/civil-status-form/civil-status-form.component.html
@@ -5,14 +5,15 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Descripción:</mat-label>
       <input matInput formControlName="descripcion" />
-      <mat-error *ngIf="this.civilStatusForm.controls['descripcion'].invalid"> {{ 'La descripción es' }} <strong>requerido</strong> </mat-error>
-    </mat-form-field>
+      <mat-error *ngIf="nameStatusControl.errors?.required"> {{ 'La descripción es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="nameStatusControl.errors?.pattern"> {{ 'La descripción solo permite letras y espacios' }} </mat-error>
+     </mat-form-field>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
     <button (click)="onSubmit(civilStatusForm.value)" [disabled]="!civilStatusForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.civilStatus ? 'Editar' : 'Crear' }}
+      {{ data.civilStatus ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
